# expenses

./: Cargo.toml  README.md
src/: cli.rs  main.rs  model.rs  queries.rs  utils.rs
